--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     volumes:
       - ./mysql/startrek_payroll.sql:/docker-entrypoint-initdb.d/startrek_payroll.sql
     networks:
-      - backend
+      - nginx-proxy_default
 
   php:
     image: php:8.0-fpm
@@ -53,7 +53,7 @@ services:
     volumes:
       - ./app:/app
     networks:
-      - backend
+      - nginx-proxy_default
 
   nginx:
     image: nginx:stable-alpine
@@ -68,11 +68,8 @@ services:
       - ./app:/app
       - ./nginx/site.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - frontend
-      - backend
+      - nginx-proxy_default
 
 networks:
-  frontend:
-    driver: bridge
-  backend:
-    driver: bridge
+  nginx-proxy_default:
+     external: true
